# star-wars-ecr-data

./: LICENSE  README.md  pyproject.toml
assets/mappings/: mon-mothma-covid.json
assets/templates/components/: patient.xml.j2
assets/templates/components/shared/: patient.xml.j2
assets/test-output/: test-patient-output.xml
scripts/: render_template.py
tests/: conftest.py  test-component-templates.py
tests/assets/: mon-mothma-covid-lab-order_RR.xml  mon-mothma-covid-lab-order_eicr.xml  mon-mothma-covid-lab-positive_RR.xml  mon-mothma-covid-lab-positive_eicr.xml  mon-mothma-covid-problem_RR.xml  mon-mothma-covid-problem_eicr.xml
validation/: validate_ecr.py
validation/logs/: svrl-output.xml
validation/schema/: CDAR2_IG_PHCR_R2_RR_D1_2017DEC_SCHEMATRON.xsl  convert-sch-to-xslt.py
validation/schema/eicr/: CDAR2_IG_PHCASERPT_R2_STU1.1_SCHEMATRON.xsl
