[project]
name = "star-wars-ecr-data"
version = "0.1.0"
description = "Creating Star Wars themed eCR data for testing publich health applications"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.5",
    "lxml>=5.3.1",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "saxonche>=12.5.0",
]
